FIXED alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+body {
+    background-color: white;
+}
+
+p {
+    color: gray
+}
+
 h1, h2 {
     text-align: center;
+    font-family: serif;
 }
 
 #vg-map {
     justify-content: center;
+    text-align: center;
+}
+
+#map-container {
+    justify-content: center;
+    text-align: center;
 }
